--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-saga": "^1.0.3"
+    "redux-saga": "^1.0.3",
+    "slugify": "^1.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
