Updating infra files

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,8 @@ server {
   listen 80;
   client_max_body_size 25M;
 
+  server_name bmwadforth.com;
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
