--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-markdown": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-syntax-highlighter": "^13.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
