--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-device-detect": "^1.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.1.2",
     "react-markdown": "^4.3.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.2.0",
