--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-syntax-highlighter": "^13.5.2",
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-markdown": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.6.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
