--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_URL=https://localhost:7218/
+#REACT_APP_API_URL=http://localhost:8080/
+
+REACT_APP_API_URL=https://api.bmwadforth.com
