--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,6 @@
 name: Build
 
+
 on: push
 
 jobs:
@@ -19,6 +20,7 @@ jobs:
 
       - run: npm run build
         name: Build
+
       - run: npm run test
         name: Test
 
@@ -29,3 +31,42 @@ jobs:
           path: |
             build
           retention-days: 1
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/master'
+
+    # Add "id-token" with the intended permissions.
+    permissions:
+      contents: 'read'
+      id-token: 'write'
+
+    env:
+      CI: 'false'
+
+    steps:
+      # actions/checkout MUST come before auth
+      - uses: 'actions/checkout@v3'
+      - uses: actions/setup-node@v2
+        name: Setup Node
+        with:
+          node-version: 16
+
+      - name: Restore Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: artifacts
+
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          workload_identity_provider: 'projects/416443939101/locations/global/workloadIdentityPools/bmwadforth-iam/providers/bmwadforth-iam-github'
+          service_account: 'bmwadforth-dev-ci@digital-node-1176.iam.gserviceaccount.com'
+
+      - id: 'deploy'
+        name: 'Deploy to Google Cloud'
+        uses: 'google-github-actions/deploy-appengine@v0'
+        with:
+          deliverables: 'app.yaml'
