--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -57,6 +57,7 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: artifacts
+          path: build
 
       - id: 'auth'
         name: 'Authenticate to Google Cloud'
