--- a/app.yaml
+++ b/app.yaml
@@ -2,9 +2,9 @@ runtime: nodejs16
 handlers:
   # Serve all static files with url ending with a file extension
   - url: /(.*\..+)$
-    static_files: artifacts/\1
-    upload: artifacts/(.*\..+)$
+    static_files: build/\1
+    upload: build/(.*\..+)$
   # Catch all handler to index.html
   - url: /.*
-    static_files: artifacts/index.html
-    upload: artifacts/index.html
+    static_files: build/index.html
+    upload: build/index.html
