--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@bmwadforth/armor-ui": "^0.1.6",
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
@@ -20,10 +21,8 @@
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "react-syntax-highlighter": "^15.5.0",
     "recoil": "^0.6.1",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
