--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -15,6 +15,17 @@ jobs:
         with:
           node-version: 16
 
+      - id: 'auth'
+        name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@v0'
+        with:
+          workload_identity_provider: 'projects/416443939101/locations/global/workloadIdentityPools/bmwadforth-iam/providers/bmwadforth-iam-github'
+          service_account: 'bmwadforth-dev-ci@digital-node-1176.iam.gserviceaccount.com'
+
+      - id: 'npm-auth'
+        name: 'Authenticate to GCP Artifact Registry'
+        run: npx google-artifactregistry-auth
+
       - run: npm install
         name: Install
 
@@ -57,6 +68,10 @@ jobs:
         with:
           workload_identity_provider: 'projects/416443939101/locations/global/workloadIdentityPools/bmwadforth-iam/providers/bmwadforth-iam-github'
           service_account: 'bmwadforth-dev-ci@digital-node-1176.iam.gserviceaccount.com'
+
+      - id: 'npm-auth'
+        name: 'Authenticate to GCP Artifact Registry'
+        run: npx google-artifactregistry-auth
 
       - id: 'sdk'
         name: 'Setup Google Cloud SDK'
