--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -74,7 +74,7 @@ jobs:
 
       - id: 'npm-auth'
         name: 'Authenticate to GCP Artifact Registry'
-        run: npx google-artifactregistry-auth
+        run: npx google-artifactregistry-auth .npmrc
 
       - id: 'sdk'
         name: 'Setup Google Cloud SDK'
@@ -91,8 +91,6 @@ jobs:
         with:
           context: .
           push: true
-          build-args: |
-            GOOGLE_APPLICATION_CREDENTIALS=${{ env.GOOGLE_APPLICATION_CREDENTIALS }}
           tags: australia-southeast2-docker.pkg.dev/digital-node-1176/bmwadforth-docker/bmwadforth-frontend:latest
 
   deploy:
