--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-#REACT_APP_API_URL=http://localhost:8080/
-
-REACT_APP_API_URL=https://api.bmwadforth.com
+REACT_APP_API_URL=http://localhost
 BROWSER=none
