--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,4 @@
 @bmwadforth:registry=https://australia-southeast2-npm.pkg.dev/digital-node-1176/bmwadforth-npm/
 //australia-southeast2-npm.pkg.dev/digital-node-1176/bmwadforth-npm/:always-auth=true
+//australia-southeast2-npm.pkg.dev/digital-node-1176/bmwadforth-npm/:_authToken=""
 legacy-peer-deps=true
