--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-jsx-a11y": "^6.6.0",
     "eslint-plugin-react": "^7.30.1",
     "nan": "^2.16.0",
+    "sass": "^1.58.3",
     "typescript": "^4.7.4",
     "webpack-dev-server": "^4.11.0"
   },
